--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   hive_ce: ^2.11.1
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
+  equatable: ^2.0.7
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
